# leo-programming

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Elephant.h
src/: Elephant.cpp
